# csc299-project

./: .gitmodules  Brainstorming  README.md  SUMMARY.md  tasks.json  todo.py  youtube link
tasks1/: README.md  tasks.json  todo.py
tasks2/: tasks.json
tasks3/: pyproject.toml
tasks3/src/tasks3/: README.md  __init__.py  todo.py
tasks3/src/tasks3/tests/: test_todo.py
tasks4/: README.md  pyproject.toml
tasks4/src/tasks4/: __init__.py  test_runner.py
tasks4/src/tasks4/tests/: test_summarizer.py
tasks5/.github/: copilot-instructions.md
tasks5/.specify/memory/: constitution.md
tasks5/.specify/templates/: agent-file-template.md  spec-template.md  tasks-template.md
tasks5/specs/1-user-task-manager/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tasks5/specs/1-user-task-manager/checklists/: requirements.md
tasks5/specs/1-user-task-manager/contracts/: commands.md
tasks5/specs/main/: plan.md
tasks5/src/: __init__.py  cli.py  models.py  storage.py
tasks5/tests/contract/: test_commands.py
tasks5/tests/integration/: test_flow.py
tasks5/tests/unit/: test_models.py  test_storage.py
