[project]
name = "tasks4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jack Settle", email = "erinasettle@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
# The `tasks4` script will run the test runner so `uv run tasks4` executes pytest.
tasks4 = "tasks4.test_runner:run"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]
